--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>customer-count-central</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Manga Recommendationn" />
+    <meta name="author" content="Olajuwon-dev" />
 
-    <meta property="og:title" content="customer-count-central" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="Manga Recommendationn" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
